<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Quiz App</string>

    <string name="welcome_message">Welcome to the Country Capitals Quiz</string>
    <string name="app_info">This quiz will test your knowledge of world countries capitals.\n\nFirst enter your name and please check the box confirming that you agree to the terms and conditions of this app. Note that otherwise you will not be able to start the quiz.\n\nThe test will consist of 10 questions: 6 multiple-choice questions each with one single correct answer, 2 open questions and 2 with one, multiple or no correct answers. Please select the option you think is correct and press the Submit button. \n\nNote that you cannot go back and change a submitted answer. The Back button on your phone shall be disabled throughout this app.\n\nFinally, you give this app an explicit permission to access the e-mail clients installed on your phone, in case you choose to share your result with your friends.</string>

    <string name="start_quiz">Start Quiz</string>
    <string name="submit">Submit Answer</string>
    <string name="name">Name</string>
    <string name="agreement">I agree</string>
    <string name="capital">Capital city</string>

    <string name="ask_question">What is the capital of %1$s?</string>
    <string name="ask_question_multiple">Which of the following capitals are located in %1$s</string>
    <string name="ask_question_result">What is the capital of: </string>
    <string name="ask_question_result2">Which of the following capitals are located in:</string>

    <string name="question">Question <xliff:g example="5" id="currentQuestionNumber">%s</xliff:g></string>

    <string name="current_score">Current score: <xliff:g example="7" id="currentScore">%s</xliff:g> / <xliff:g example="10" id="maxCurrentScore">%s</xliff:g></string>
    <string name="player_name">Player: <xliff:g example="Paul" id="testeeName">%s</xliff:g></string>

    <string name="player_name_results"><xliff:g example="Paul" id="testeeName">%s</xliff:g>\'s results:</string>
    <string name="player_result_toast"><xliff:g example="Paul" id="testeeName">%1$s</xliff:g>\'s final score: <xliff:g example="7" id="currentScore">%2$d</xliff:g> / <xliff:g example="10" id="maxCurrentScore">%3$d</xliff:g></string>
    <string name="player_name_score"><xliff:g example="Paul" id="testeeName">%s</xliff:g>\'s final report:</string>
    <string name="player_result_share_subject"><xliff:g example="Paul" id="testeeName">%s</xliff:g>\'s result at Capitals Quiz</string>
    <string name="final_score"><xliff:g example="7" id="currentScore">%1$d</xliff:g> / <xliff:g example="10" id="maxCurrentScore">%2$d</xliff:g></string>

    <string name="share_message_congratulate">Raul hereby certifies that <xliff:g example="Paul" id="testeeName">%1$s</xliff:g> has provided <xliff:g example="7" id="currentScore">%2$d</xliff:g> correct answers out of a total of <xliff:g example="10" id="maxCurrentScore">%3$d</xliff:g> possible at his countries capitals quiz. Let\'s congratulate %1$s.</string>
    <string name="share_message_encourage">Raul hereby certifies that <xliff:g example="Paul" id="testeeName">%1$s</xliff:g> has provided <xliff:g example="7" id="currentScore">%2$d</xliff:g> correct answers out of a total of <xliff:g example="10" id="maxCurrentScore">%3$d</xliff:g> possible at his countries capitals quiz. Let\'s encourage %1$s to do better next time.</string>

    <string name="correct">That is correct</string>
    <string name="wrong">That is wrong</string>

    <string name="country">Country:</string>
    <string name="provided_answer">Provided\nAnswer:</string>
    <string name="correct_answer">Correct\nAnswer:</string>

    <string name="restart">Restart</string>
    <string name="grade">Grade</string>
    <string name="share_result">Share Result</string>

    <string name="player">Player:</string>
    <string name="correct_title">Correct:</string>

    <string name="romania">Romania</string>


</resources>
