<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/welcome_background_color_darker"
    android:orientation="vertical"
    tools:context="com.example.android.quizapp.ReportActivity2">

    <FrameLayout style="@style/frameLayoutWelcome">

        <TextView
            android:id="@+id/name_results2_text_view"
            style="@style/text.question_number" />

    </FrameLayout>

    <FrameLayout style="@style/frameLayoutWelcome">

        <TextView
            android:id="@+id/question_text_view_results2"
            style="@style/text.title"
            android:text="@string/ask_question_result2" />

    </FrameLayout>


    <View style="@style/line" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/noHeight"
        android:layout_weight="1"
        android:background="@color/welcome_background_color_lighter"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/text.result.start"
                    android:gravity="center"
                    android:id="@+id/text_view_region_0"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    style="@style/text.result.start"
                    android:layout_weight="2.2" />

                <TextView
                    style="@style/text.result2"
                    android:layout_weight="1"
                    android:text="@string/player"/>

                <TextView
                    style="@style/text.result2"
                    android:layout_weight="1"
                    android:text="@string/correct_title"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_view_capital_0"
                    style="@style/text.result.start"

                    android:layout_weight="2.2" />

                <CheckBox
                    android:id="@+id/checbox_player_0"
                    style="@style/text.checkbox.report"
                    android:layout_weight="1" />

                <CheckBox
                    android:id="@+id/checkbox_correct_0"
                    style="@style/text.checkbox.report"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_view_capital_1"
                    style="@style/text.result.start"
                    android:layout_weight="2.2" />

                <CheckBox
                    android:id="@+id/checbox_player_1"
                    style="@style/text.checkbox.report"
                    android:layout_weight="1" />

                <CheckBox
                    android:id="@+id/checkbox_correct_1"
                    style="@style/text.checkbox.report"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_view_capital_2"
                    style="@style/text.result.start"
                    android:layout_weight="2.2" />

                <CheckBox
                    android:id="@+id/checbox_player_2"
                    style="@style/text.checkbox.report"
                    android:layout_weight="1" />

                <CheckBox
                    android:id="@+id/checkbox_correct_2"
                    style="@style/text.checkbox.report"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_view_capital_3"
                    style="@style/text.result.start"
                    android:layout_weight="2.2" />

                <CheckBox
                    android:id="@+id/checbox_player_3"
                    style="@style/text.checkbox.report"
                    android:layout_weight="1" />

                <CheckBox
                    android:id="@+id/checkbox_correct_3"
                    style="@style/text.checkbox.report"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_view_capital_4"
                    style="@style/text.result.start"
                    android:layout_weight="2.2" />

                <CheckBox
                    android:id="@+id/checbox_player_4"
                    style="@style/text.checkbox.report"
                    android:layout_weight="1" />

                <CheckBox
                    android:id="@+id/checkbox_correct_4"
                    style="@style/text.checkbox.report"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_view_capital_5"
                    style="@style/text.result.start"
                    android:layout_weight="2.2" />

                <CheckBox
                    android:id="@+id/checbox_player_5"
                    style="@style/text.checkbox.report"
                    android:layout_weight="1" />

                <CheckBox
                    android:id="@+id/checkbox_correct_5"
                    style="@style/text.checkbox.report"
                    android:layout_weight="1" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/text.result.start"
                    android:id="@+id/text_view_region_1"
                    android:layout_weight="1"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    style="@style/text.result.start"
                    android:layout_weight="2.2" />

                <TextView
                    style="@style/text.result2"
                    android:layout_weight="1"
                    android:text="@string/player"/>

                <TextView
                    style="@style/text.result2"
                    android:layout_weight="1"
                    android:text="@string/correct_title"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/text_view_capital_6"
                    style="@style/text.result.start"
                    android:layout_weight="2.2" />

                <CheckBox
                    android:id="@+id/checbox_player_6"
                    style="@style/text.checkbox.report"
                    android:layout_weight="1" />

                <CheckBox
                    android:id="@+id/checkbox_correct_6"
                    style="@style/text.checkbox.report"
                    android:layout_weight="1" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_view_capital_7"
                    style="@style/text.result.start"
                    android:layout_weight="2.2" />

                <CheckBox
                    android:id="@+id/checbox_player_7"
                    style="@style/text.checkbox.report"
                    android:layout_weight="1" />

                <CheckBox
                    android:id="@+id/checkbox_correct_7"
                    style="@style/text.checkbox.report"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_view_capital_8"
                    style="@style/text.result.start"
                    android:layout_weight="2.2" />

                <CheckBox
                    android:id="@+id/checbox_player_8"
                    style="@style/text.checkbox.report"
                    android:layout_weight="1" />

                <CheckBox
                    android:id="@+id/checkbox_correct_8"
                    style="@style/text.checkbox.report"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/text_view_capital_9"
                    style="@style/text.result.start"
                    android:layout_weight="2.2" />

                <CheckBox
                    android:id="@+id/checbox_player_9"
                    style="@style/text.checkbox.report"
                    android:layout_weight="1" />

                <CheckBox
                    android:id="@+id/checkbox_correct_9"
                    style="@style/text.checkbox.report"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_view_capital_10"
                style="@style/text.result.start"
                android:layout_weight="2.2" />

            <CheckBox
                android:id="@+id/checbox_player_10"
                style="@style/text.checkbox.report"
                android:layout_weight="1" />

            <CheckBox
                android:id="@+id/checkbox_correct_10"
                style="@style/text.checkbox.report"
                android:layout_weight="1" />

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_view_capital_11"
                    style="@style/text.result.start"
                    android:layout_weight="2.2" />

                <CheckBox
                    android:id="@+id/checbox_player_11"
                    style="@style/text.checkbox.report"
                    android:layout_weight="1" />

                <CheckBox
                    android:id="@+id/checkbox_correct_11"
                    style="@style/text.checkbox.report"
                    android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button_next"
                    style="@style/button.result"
                    android:onClick="back"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <View style="@style/line" />

    <FrameLayout style="@style/frameLayoutWelcome">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/elevation">

            <TextView
                android:id="@+id/name_text_view_report_2"
                style="@style/text.summary.start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/current_score_view_report_2"
                style="@style/text.summary.end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

    </FrameLayout>

    <FrameLayout style="@style/frameLayoutWelcome">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/restart_button_2"
                style="@style/button.result"
                android:layout_alignParentStart="true"
                android:onClick="restart"
                android:text="@string/restart" />

            <Button
                android:id="@+id/share_button_2"
                style="@style/button.result"
                android:layout_alignParentEnd="true"
                android:onClick="share"
                android:text="@string/share_result" />

        </RelativeLayout>

    </FrameLayout>

</LinearLayout>


